# headroom-japanese

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LIMITATIONS.md  LOSSLESS_VS_LOSSY.md  MORNING.md  OVERNIGHT_PLAN.md  README.ja.md  README.ko.md  README.md  RUST_PARITY.md  RUST_PORT_PLAN.md  pyproject.toml
benchmarks/: README.md  datasets.py  models.py  run_eval.py
benchmarks/history/: 0.2.0_20260621-1838.md  0.3.0_20260621-1846.md  0.4.0_20260621-1859.md  0.5.0_20260621-1909.md  0.6.0_20260621-1919.md  0.6.0_20260621-1923.md  0.6.0_20260621-2225.md
crates/headroom_ja_core/: Cargo.toml  build.ps1  pyproject.toml
crates/headroom_ja_core/PORT_SPECS/: 1_config_types_hashing.md  2_statistics_outliers.md  3_anchors_classifier.md  4_orchestration_crusher.md  5_compaction.md
crates/headroom_ja_core/src/: lib.rs
examples/: demo.py
headroom_ja/: __init__.py  cache.py  compaction.py  context_tracker.py  crusher.py  lexicon_ja.py  relevance.py  router.py  text_compress.py  tokenizer_ja.py  tokens.py  types.py
tests/: test_code_compress.py  test_compaction.py  test_context_tracker.py  test_crusher.py  test_edge_cases.py  test_text_compress.py  test_tokenizer_ja.py
