[package]
name = "headroom_ja_core"
version = "0.1.0"
edition = "2021"
description = "Rust core for headroom-japanese (faithful port of headroom's smart_crusher), exposed to Python via PyO3"
license = "Apache-2.0"

[lib]
name = "headroom_ja_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
